# TP3-PROGIII

./: BSTree.hpp  CMakeLists.txt  Folder.hpp  Note.hpp  Serialization.hpp  TLNode.hpp  TP3.hpp  TP3CLWindows.rar  Window.hpp  main.cpp
BSTree/: DLNode.hpp
Bonus/: AVLTRee.hpp  Serialization.hpp  priorityQueue.hpp
Bonus/AVLTree/: AVLTree.hpp  TLNode.hpp
Bonus/Huffman/: Huffman.cpp  Huffman.hpp  dictionnaire.txt
Bonus/PriorityQueue/: PQNode.hpp  priorityQueue.hpp
Bonus/Serialization/: Serialization.cpp  Serialization.hpp
MyTests/: testFile.cpp
saves/: ntfs.xml
